force-app/main/default/objects/EC_PunchOutInfo__c/EC_PunchOutInfo__c.object-meta.xml
<CustomObject>
    <label>PunchOutInfo</label>
    <nameField>
        <label>EC_PunchOutInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PunchOutInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>