force-app/main/default/objects/EC_PunchOutInfo__c/fields/EC_BuyerCookie__c.field-meta.xml
<CustomField>
    <fullName>EC_BuyerCookie__c</fullName>
    <label>EC_BuyerCookie</label>
    <length>90</length>
    <type>Text</type>
</CustomField>