force-app/main/default/objects/EC_PunchOutInfo__c/fields/EC_EncryptedCartId__c.field-meta.xml
<CustomField>
    <fullName>EC_EncryptedCartId__c</fullName>
    <label>EC_EncryptedCartId</label>
    <length>90</length>
    <type>Text</type>
</CustomField>