force-app/main/default/objects/EC_PunchOutInfo__c/fields/EC_From_Domain__c.field-meta.xml
<CustomField>
    <fullName>EC_From_Domain__c</fullName>
    <label>EC_From_Domain</label>
    <length>90</length>
    <type>Text</type>
</CustomField>