force-app/main/default/objects/EC_PunchOutInfo__c/fields/EC_PayloadId__c.field-meta.xml
<CustomField>
    <fullName>EC_PayloadId__c</fullName>
    <label>EC_PayloadId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>