force-app/main/default/objects/EC_PunchOutInfo__c/fields/EC_Sender_Identity__c.field-meta.xml
<CustomField>
    <fullName>EC_Sender_Identity__c</fullName>
    <label>EC_ Sender_Identity</label>
    <length>90</length>
    <type>Text</type>
</CustomField>