force-app/main/default/objects/EC_PunchOutInfo__c/fields/EC_SenderUserAgent__c.field-meta.xml
<CustomField>
    <fullName>EC_SenderUserAgent__c</fullName>
    <label>EC_SenderUserAgent</label>
    <length>90</length>
    <type>Text</type>
</CustomField>