force-app/main/default/objects/EC_PunchOutInfo__c/fields/EC_Version__c.field-meta.xml
<CustomField>
    <fullName>EC_Version__c</fullName>
    <label>EC_Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>