force-app/main/default/objects/EC_PunchOutInfo__c/fields/EC_XMLLanguage__c.field-meta.xml
<CustomField>
    <fullName>EC_XMLLanguage__c</fullName>
    <label>EC_XMLLanguage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>