force-app/main/default/objects/EC_PunchOutInfo__c/listViews/Recently_Created.listView-meta.xml
<ListView>
    <fullName>Recently_Created</fullName>
    <columns>NAME</columns>
    <columns>EC_BuyerCookie__c</columns>
    <columns>EC_EncryptedCartId__c</columns>
    <columns>EC_From_Domain__c</columns>
    <columns>EC_From_Identity__c</columns>
    <columns>EC_Sender_Domain__c</columns>
    <columns>EC_Sender_Identity__c</columns>
    <columns>EC_SenderUserAgent__c</columns>
    <columns>EC_To_Domain__c</columns>
    <columns>EC_To_Identity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Recently Created</label>
    <language>en_US</language>
</ListView>